remove rdtype and smuxes from the main bulk

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -41,13 +41,13 @@
 \input{../nor2/nor2.tex}
 \input{../nor3/nor3.tex}
 \input{../or2/or2.tex}
-\input{../rdtype/rdtype.tex}
+%\input{../rdtype/rdtype.tex}
 \input{../rightend/rightend.tex}
 \input{../rowcrosser/rowcrosser.tex}
 \input{../scandtype/scandtype.tex}
 \input{../scanreg/scanreg.tex}
-\input{../smux2/smux2.tex}
-\input{../smux3/smux3.tex}
+%\input{../smux2/smux2.tex}
+%\input{../smux3/smux3.tex}
 \input{../tiehigh/tiehigh.tex}
 \input{../tielow/tielow.tex}
 \input{../trisbuf/trisbuf.tex}
