corrected a include typo

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -6,8 +6,8 @@
 \usepackage{graphicx}
 \usepackage{epstopdf}
 
-\usepackage{lipsum}% dummy text
-\usepackage{todonotes}
+%\usepackage{lipsum}% dummy text
+%\usepackage{todonotes}
 %\usepackage[disable]{todonotes} %uncomment this to disable to do notes
 \newcommand{\inote}[1] {\todo[inline]{#1}}
 %% \removecolourlinks    % Uncomment this command to remove colour from any links
@@ -59,7 +59,7 @@
 \input{../xor2/xor2.tex}
 
 \appendix
-\input{appendixA.tex}
+\input{AppendixA.tex}
 
 \clearpage
 \section{Design Detail}
