muchos change to databook page for leftbuf

--- a/leftbuf/leftbuf.tex
+++ b/leftbuf/leftbuf.tex
@@ -2,7 +2,7 @@
 \cellname{leftbuf}
 \designer{Henry Lovett}
 \celldescription{A start of row buffer cell.}
-\topimages{../leftbuf/symbol.jpg}{../leftbuf/circuitdiagram.jpg}{../leftbuf/blackbox.jpg}
+\topimages{../leftbuf/symbol.pdf}{../leftbuf/circuitdiagram.pdf}{../leftbuf/blackbox.pdf}
 
 \acchar{../leftbuf/acresults.txt}
 
