--- a/leftbuf/detail.tex
+++ b/leftbuf/detail.tex
@@ -2,7 +2,7 @@
 \designer{Henry Lovett}
 \celldescription{A start of row buffer cell.}
 
-\stickdiagram{../leftbuf/stickdiagram.jpg}
-\transistor{../leftbuf/transistorcd.jpg}
+\stickdiagram{../leftbuf/stickdiagram.pdf}
+\transistor{../leftbuf/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
