Sorted page for inv

--- a/inv/inv.tex
+++ b/inv/inv.tex
@@ -2,7 +2,7 @@
 \cellname{Inverter}
 \designer{Henry Lovett}
 \celldescription{A basic inverter gate}
-\topimages{../inv/symbol.jpg}{../inv/circuitdiagram.jpg}{../inv/blackbox.jpg}
+\topimagesgate{../inv/symbol.pdf}{../inv/blackbox.pdf}
 
 \acchar{../inv/acresults.txt}
 
