--- a/nor2/nor2.tex
+++ b/nor2/nor2.tex
@@ -2,7 +2,7 @@
 \cellname{nor2}
 \designer{Henry Lovett}
 \celldescription{A two input NOR gate}
-\topimages{../nor2/symbol.jpg}{../nor2/circuitdiagram.jpg}{../nor2/blackbox.jpg}
+\topimagesgate{../nor2/symbol.pdf}{../nor2/blackbox.pdf}
 
 \acchar{../nor2/acresults.txt}
 
