--- a/nor3/nor3.tex
+++ b/nor3/nor3.tex
@@ -2,7 +2,7 @@
 \cellname{nor3}
 \designer{Henry Lovett}
 \celldescription{A three input NOR gate}
-\topimages{../nor3/symbol.jpg}{../nor3/circuitdiagram.jpg}{../nor3/blackbox.jpg}
+\topimagesgate{../nor3/symbol.pdf}{../nor3/blackbox.pdf}
 
 \acchar{../nor3/acresults.txt}
 
