--- a/or2/or2.tex
+++ b/or2/or2.tex
@@ -2,7 +2,7 @@
 \cellname{or2}
 \designer{Henry Lovett}
 \celldescription{A two input OR gate}
-\topimages{../or2/symbol.jpg}{../or2/circuitdiagram.jpg}{../or2/blackbox.jpg}
+\topimagesgate{../or2/symbol.pdf}{../or2/blackbox.pdf}
 
 \acchar{../or2/acresults.txt}
 
