first image package

--- a/fulladder/detail.tex
+++ b/fulladder/detail.tex
@@ -2,7 +2,7 @@
 \designer{Martin Wearn}
 \celldescription{Adds two bit values and the previous bitslice carry out, to produce a sum and carry}
 
-\stickdiagram{../fulladder/stickdiagram.jpg}
-\transistor{../fulladder/transistorcd.jpg}
+\stickdiagram{../fulladder/stickdiagram.pdf}
+\transistor{../fulladder/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
