--- a/fulladder/fulladder.tex
+++ b/fulladder/fulladder.tex
@@ -2,7 +2,7 @@
 \cellname{fulladder}
 \designer{Martin Wearn}
 \celldescription{Adds two bit values and the previous bitsclie carry out, to produce a sum and carry}
-\topimages{../fulladder/symbol.jpg}{../fulladder/circuitdiagram.jpg}{../fulladder/blackbox.jpg}
+\topimages{../fulladder/symbol.png}{../fulladder/circuitdiagram.pdf}{../fulladder/blackbox.pdf}
 
 \acchar{../fulladder/acresults.txt}
 
