--- a/halfadder/detail.tex
+++ b/halfadder/detail.tex
@@ -2,7 +2,7 @@
 \designer{Martin Wearn}
 \celldescription{Adds two bits to produce a sum and carry}
 
-\stickdiagram{../halfadder/stickdiagram.jpg}
-\transistor{../halfadder/transistorcd.jpg}
+\stickdiagram{../halfadder/stickdiagram.pdf}
+\transistor{../halfadder/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
