--- a/tiehigh/tiehigh.tex
+++ b/tiehigh/tiehigh.tex
@@ -2,7 +2,7 @@
 \cellname{tiehigh}
 \designer{Martin Wearn}
 \celldescription{A tie to Vdd cell}
-\topimages{../tiehigh/symbol.jpg}{../tiehigh/circuitdiagram.jpg}{../tiehigh/blackbox.jpg}
+\topimages{../tiehigh/symbol.jpg}{../tiehigh/circuitdiagram.jpg}{../tiehigh/blackbox.pdf}
 
 \acchar{../tiehigh/acresults.txt}
 
