--- a/tielow/tielow.tex
+++ b/tielow/tielow.tex
@@ -2,7 +2,7 @@
 \cellname{tielow}
 \designer{Martin Wearn}
 \celldescription{A tie to GND cell}
-\topimages{../tielow/symbol.jpg}{../tielow/circuitdiagram.jpg}{../tielow/blackbox.jpg}
+\topimages{../tielow/symbol.jpg}{../tielow/circuitdiagram.jpg}{../tielow/blackbox.pdf}
 
 \acchar{../tielow/acresults.txt}
 
