--- a/rowcrosser/rowcrosser.tex
+++ b/rowcrosser/rowcrosser.tex
@@ -2,7 +2,7 @@
 \cellname{rowcrosser}
 \designer{Martin Wearn}
 \celldescription{A rowcrossing cell}
-\topimages{../rowcrosser/symbol.jpg}{../rowcrosser/circuitdiagram.jpg}{../rowcrosser/blackbox.jpg}
+\topimages{../rowcrosser/symbol.jpg}{../rowcrosser/circuitdiagram.jpg}{../rowcrosser/blackbox.pdf}
 
 \acchar{../rowcrosser/acresults.txt}
 
