rdtpe stick and transistor diagrams

--- a/rdtype/detail.tex
+++ b/rdtype/detail.tex
@@ -2,7 +2,7 @@
 \designer{Ashley Robinson}
 \celldescription{Raw Dtype}
 
-\stickdiagram{../rdtype/stickdiagram.jpg}
-\transistor{../rdtype/transistorcd.jpg}
+\stickdiagram{../rdtype/stickdiagram.pdf}
+\transistor{../rdtype/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
