xor2 sd and tex pdf hack

--- a/xor2/detail.tex
+++ b/xor2/detail.tex
@@ -2,7 +2,7 @@
 \designer{Ashley Robinson}
 \celldescription{A 2 input XOR gate.}
 
-\stickdiagram{../xor2/stickdiagram.jpg}
-\transistor{../xor2/transistorcd.jpg}
+\stickdiagram{../xor2/stickdiagram.pdf}
+\transistor{../xor2/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
