Removed references to non-existing files.

--- a/rowcrosser/rowcrosser.tex
+++ b/rowcrosser/rowcrosser.tex
@@ -2,8 +2,8 @@
 \cellname{rowcrosser}
 \designer{Martin Wearn}
 \celldescription{A rowcrossing cell}
-\topimages{../rowcrosser/symbol.jpg}{../rowcrosser/circuitdiagram.jpg}{../rowcrosser/blackbox.pdf}
+%\topimages{../rowcrosser/symbol.jpg}{../rowcrosser/circuitdiagram.jpg}{../rowcrosser/blackbox.pdf}
 
-\acchar{../rowcrosser/acresults.txt}
+%\acchar{../rowcrosser/acresults.txt}
 
-\sysverilog{../rowcrosser/sv.jpg}
+%\sysverilog{../rowcrosser/sv.jpg}
