--- a/tiehigh/tiehigh.tex
+++ b/tiehigh/tiehigh.tex
@@ -2,8 +2,8 @@
 \cellname{tiehigh}
 \designer{Martin Wearn}
 \celldescription{A tie to Vdd cell}
-\topimages{../tiehigh/symbol.jpg}{../tiehigh/circuitdiagram.jpg}{../tiehigh/blackbox.pdf}
+%\topimages{../tiehigh/symbol.jpg}{../tiehigh/circuitdiagram.jpg}{../tiehigh/blackbox.pdf}
 
-\acchar{../tiehigh/acresults.txt}
+%\acchar{../tiehigh/acresults.txt}
 
-\sysverilog{../tiehigh/sv.jpg}
+%\sysverilog{../tiehigh/sv.jpg}
