--- a/tielow/tielow.tex
+++ b/tielow/tielow.tex
@@ -2,8 +2,8 @@
 \cellname{tielow}
 \designer{Martin Wearn}
 \celldescription{A tie to GND cell}
-\topimages{../tielow/symbol.jpg}{../tielow/circuitdiagram.jpg}{../tielow/blackbox.pdf}
+%\topimages{../tielow/symbol.jpg}{../tielow/circuitdiagram.jpg}{../tielow/blackbox.pdf}
 
-\acchar{../tielow/acresults.txt}
+%\acchar{../tielow/acresults.txt}
 
-\sysverilog{../tielow/sv.jpg}
+%\sysverilog{../tielow/sv.jpg}
