Made stick diagrams bigger.

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -67,7 +67,7 @@
 \clearpage
 \section{Design Detail}
 \renewcommand{\cellname}[1] {\newpage \subsection{#1} \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}}
-\newcommand{\stickdiagram}[1]{\subsubsection*{Stick Diagram} \includegraphics[width=0.5\textwidth,keepaspectratio=true]{#1}}
+\newcommand{\stickdiagram}[1]{\subsubsection*{Stick Diagram} \includegraphics[width=\textwidth,height=12cm,keepaspectratio=true]{#1}}
 \newcommand{\transistor}[1]{\subsubsection*{Transistor Level Circuit Diagram} \includegraphics[width=0.5\textwidth,keepaspectratio=true]{#1}}
 
 \input{../fulladder/detail.tex}
