redone black boxes

--- a/global/Desex3.tex
+++ b/global/Desex3.tex
@@ -175,38 +175,38 @@ black box view showing dimensions\\
 %Example citation \cite{Figueredo:2009dg}.
 
 %------------------------------------------------------------------------------------------
- \newpage 
+% \newpage 
 %\subsection{AND2} % Sub-section
-\input{and2.tex}
+%\input{and2.tex}
 
 
- \newpage 
+% \newpage 
 %\subsection{Buffer}
-\input{buffer.tex}
+%\input{buffer.tex}
 
-\newpage 
+%\newpage 
 %\subsection{Full Adder}
-\input{fulladder.tex}
+%\input{fulladder.tex}
 
  \newpage 
 %\subsection{Half Adder}
 \input{halfadder.tex}
 
- \newpage 
+ %\newpage 
 %\subsection{Inverter}
-\input{inverter.tex}
+%\input{inverter.tex}
 
- \newpage 
+ %\newpage 
 %\subsection{Left Buffer}
-\input{leftbuf.tex}
-git giigigigi
- \newpage 
-%\subsection{MUX2}
-\input{mux2.tex}
+%\input{leftbuf.tex}
 
- \newpage 
+% \newpage 
+%\subsection{MUX2}
+%\input{mux2.tex}
+
+% \newpage 
 %\subsection{NAND2}
-\input{nand2.tex}
+%\input{nand2.tex}
 
  \newpage 
 %\subsection{NAND3}
@@ -216,34 +216,34 @@ git giigigigi
 
 \newpage 
 %\subsection{NOR2}
-\input{nor2.tex}
+%\input{nor2.tex}
 
 \newpage 
 %\subsection{NOR3}
-\input{nor3.tex}
+%\input{nor3.tex}
 
  \newpage 
 %\subsection{OR2}
-\input{or2.tex}
+%\input{or2.tex}
 
 \newpage 
 %\subsection{Raw D-type}
-\input{rdtype.tex}
+%\input{rdtype.tex}
 
 \newpage 
 %\subsection{Right End}
-\input{rightend.tex}
+%\input{rightend.tex}
 
 %\newpage 
 %\subsection{Row Crosser}
 
  \newpage 
 %\subsection{Scan D-type}
-\input{scandtype}
+%\input{scandtype}
 
  \newpage 
 %\subsection{Scan Register}
-\input{scanreg}
+%\input{scanreg}
 
 % \newpage 
 %\subsection{SMUX2}
@@ -260,11 +260,11 @@ git giigigigi
 
 \newpage 
 %\subsection{Tristate Buffer}
-\input{trisbuf.tex}
+%\input{trisbuf.tex}
 
 \newpage 
 %\subsection{XOR2}
-\input{xor2.tex}
+%\input{xor2.tex}
 
 %%------------------------------------------------------------------------------------------
 
@@ -327,14 +327,14 @@ git giigigigi
 \section{Major Cell Design Detail}
 \newpage
 \subsection{Designer: Jonathan Griffiths\\} % Sub-section
-\input{JGAppendix.tex}
+%\input{JGAppendix.tex}
 %\newpage
 %\subsection{Designer: Nayaab Gupta\\} % Sub-section
 %\input{and2.tex}
 \newpage
 
 \subsection{Designer: Yusra Hussain\\} % Sub-section
-\input{yusrappendix.tex}
+%\input{yusrappendix.tex}
 %/newpage
 %\subsection{Desiner: Doga Kuyucu\\} % Sub-section
 %\input{and2.tex}
