Done images for right buf

--- a/rightend/rightend.tex
+++ b/rightend/rightend.tex
@@ -2,7 +2,7 @@
 \cellname{rightend}
 \designer{Henry Lovett}
 \celldescription{An end of row buffer cell.}
-\topimages{../rightend/symbol.jpg}{../rightend/circuitdiagram.jpg}{../rightend/blackbox.jpg}
+\topimagesgate{../rightend/symbol.pdf}{../rightend/blackbox.pdf}
 
 \acchar{../rightend/acresults.txt}
 
