Combined the crossing and tie cells into one done black boxes for them too.

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -51,13 +51,14 @@
 \input{../or2/or2.tex}
 %\input{../rdtype/rdtype.tex}
 \input{../rightend/rightend.tex}
-\input{../rowcrosser/rowcrosser.tex}
+%\input{../rowcrosser/rowcrosser.tex}
 \input{../scandtype/scandtype.tex}
 \input{../scanreg/scanreg.tex}
 %\input{../smux2/smux2.tex}
 %\input{../smux3/smux3.tex}
-\input{../tiehigh/tiehigh.tex}
-\input{../tielow/tielow.tex}
+%\input{../tiehigh/tiehigh.tex}
+%\input{../tielow/tielow.tex}
+\input{tiecells.tex}
 \input{../trisbuf/trisbuf.tex}
 \input{../xor2/xor2.tex}
 
