--- a/xor2/xor2.tex
+++ b/xor2/xor2.tex
@@ -2,7 +2,7 @@
 \cellname{xor2}
 \designer{Ashley Robinson}
 \celldescription{A two input xor gate}
-\topimages{../xor2/symbol.jpg}{../xor2/circuitdiagram.jpg}{../xor2/blackbox.jpg}
+\topimages{../xor2/symbol.pdf}{../xor2/gateLevel.pdf}{../xor2/blackbox.jpg}
 
 \acchar{../xor2/acresults.txt}
 
