--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -58,7 +58,7 @@
 %\input{../smux3/smux3.tex}
 %\input{../tiehigh/tiehigh.tex}
 %\input{../tielow/tielow.tex}
-\input{tiecells.tex}
+\input{tiecells}
 \input{../trisbuf/trisbuf.tex}
 \input{../xor2/xor2.tex}
 
