--- a/nand2/nand2.tex
+++ b/nand2/nand2.tex
@@ -2,7 +2,7 @@
 \cellname{nand2}
 \designer{Constantijn Schepens}
 \celldescription{A two input NAND gate}
-\topimages{../nand2/symbol.jpg}{../nand2/circuitdiagram.jpg}{../nand2/blackbox.jpg}
+\topimages{../nand2/symbol.jpg}{../nand2/circuitdiagram.jpg}{../nand2/blackbox.pdf}
 
 \acchar{../nand2/acresults.txt}
 
