--- a/nand4/nand4.tex
+++ b/nand4/nand4.tex
@@ -2,7 +2,7 @@
 \cellname{nand4}
 \designer{Constantijn Schepens}
 \celldescription{A two input NAND gate}
-\topimages{../nand4/symbol.jpg}{../nand4/circuitdiagram.jpg}{../nand4/blackbox.jpg}
+\topimages{../nand4/symbol.jpg}{../nand4/circuitdiagram.jpg}{../nand4/blackbox.pdf}
 
 \acchar{../nand4/acresults.txt}
 
