added all blackboxes.

--- a/scandtype/scandtype.tex
+++ b/scandtype/scandtype.tex
@@ -2,7 +2,7 @@
 \cellname{scandtype}
 \designer{Constantijn Schepens}
 \celldescription{A Raw DType cell}
-\topimages{../scandtype/symbol.jpg}{../scandtype/circuitdiagram.jpg}{../scandtype/blackbox.jpg}
+\topimages{../scandtype/symbol.jpg}{../scandtype/circuitdiagram.jpg}{../scandtype/blackbox.pdf}
 
 \acchar{../scandtype/acresults.txt}
 
