--- a/scanreg/scanreg.tex
+++ b/scanreg/scanreg.tex
@@ -2,7 +2,7 @@
 \cellname{scanreg}
 \designer{Constantijn Schepens}
 \celldescription{A Raw DType cell}
-\topimages{../scanreg/symbol.jpg}{../scanreg/circuitdiagram.jpg}{../scanreg/blackbox.jpg}
+\topimages{../scanreg/symbol.jpg}{../scanreg/circuitdiagram.jpg}{../scanreg/blackbox.pdf}
 
 \acchar{../scanreg/acresults.txt}
 
