used the correct file extension for symbols, cd, etc in the .tex files

--- a/mux2/mux2.tex
+++ b/mux2/mux2.tex
@@ -2,7 +2,7 @@
 \cellname{mux2}
 \designer{Constantijn Schepens}
 \celldescription{A two input Multiplexor}
-\topimages{../mux2/symbol.jpg}{../mux2/circuitdiagram.jpg}{../mux2/blackbox.pdf}
+\topimages{../mux2/symbol.pdf}{../mux2/circuitdiagram.jpg}{../mux2/blackbox.pdf}
 
 \acchar{../mux2/acresults.txt}
 
