--- a/smux2/detail.tex
+++ b/smux2/detail.tex
@@ -2,7 +2,7 @@
 \designer{Schep}
 \celldescription{A start of row buffer cell.}
 
-\stickdiagram{../smux2/stickdiagram.jpg}
-\transistor{../smux2/transistorcd.jpg}
+\stickdiagram{../smux2/stickdiagram.pdf}
+\transistor{../smux2/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
