--- a/smux3/detail.tex
+++ b/smux3/detail.tex
@@ -2,7 +2,7 @@
 \designer{Schep}
 \celldescription{A scan multiplexor.}
 
-\stickdiagram{../smux3/stickdiagram.jpg}
-\transistor{../smux3/transistorcd.jpg}
+\stickdiagram{../smux3/stickdiagram.pdf}
+\transistor{../smux3/transistorcd.pdf}
 
 %TO DO : Results of loaded simulation bits
