fixed errors in all my .tex files

--- a/scandtype/scandtype.tex
+++ b/scandtype/scandtype.tex
@@ -1,7 +1,7 @@
 
 \cellname{scandtype}
 \designer{Constantijn Schepens}
-\celldescription{A Raw DType cell}
+\celldescription{A scannable D-Type cell}
 \topimages{../scandtype/symbol.jpg}{../scandtype/circuitdiagram.jpg}{../scandtype/blackbox.pdf}
 
 \acchar{../scandtype/acresults.txt}
