--- a/scanreg/scanreg.tex
+++ b/scanreg/scanreg.tex
@@ -1,7 +1,7 @@
 
 \cellname{scanreg}
 \designer{Constantijn Schepens}
-\celldescription{A Raw DType cell}
+\celldescription{A scannable register cell}
 \topimages{../scanreg/symbol.jpg}{../scanreg/circuitdiagram.jpg}{../scanreg/blackbox.pdf}
 
 \acchar{../scanreg/acresults.txt}
