--- a/smux3/detail.tex
+++ b/smux3/detail.tex
@@ -1,5 +1,5 @@
 \cellname{smux3}
-\designer{Schep}
+\designer{Constantijn Schepens}
 \celldescription{A 3 input scannable multiplexer, intended to be connected to a
 raw D-type to create a scannable register.}
 
