--- a/nand3/nand3.tex
+++ b/nand3/nand3.tex
@@ -1,7 +1,7 @@
 
 \cellname{nand3}
 \designer{Constantijn Schepens}
-\celldescription{A two input NAND gate}
+\celldescription{A three input NAND gate}
 \topimages{../nand3/symbol.pdf}{../nand3/circuitdiagram.jpg}{../nand3/blackbox.pdf}
 
 \acchar{../nand3/acresults.txt}
