more symbols and circuits

--- a/buffer/buffer.tex
+++ b/buffer/buffer.tex
@@ -2,7 +2,7 @@
 \cellname{buffer}
 \designer{Ashley Robinson}
 \celldescription{A non-inverting buffer}
-\topimages{../buffer/symbol.jpg}{../buffer/circuitdiagram.jpg}{../buffer/blackbox.pdf}
+\topimages{../buffer/symbol.pdf}{../buffer/gateLevel.pdf}{../buffer/blackbox.pdf}
 
 \acchar{../buffer/acresults.txt}
 
