--- a/trisbuf/trisbuf.tex
+++ b/trisbuf/trisbuf.tex
@@ -2,7 +2,7 @@
 \cellname{trisbuf}
 \designer{Ashley Robinson}
 \celldescription{A tristate buffer}
-\topimages{../trisbuf/symbol.jpg}{../trisbuf/circuitdiagram.jpg}{../trisbuf/blackbox.pdf}
+\topimages{../trisbuf/symbol.pdf}{../trisbuf/gateLevel.pdf}{../trisbuf/blackbox.pdf}
 
 \acchar{../trisbuf/acresults.txt}
 
