--- a/rdtype/detail.tex
+++ b/rdtype/detail.tex
@@ -2,6 +2,11 @@
 \designer{Ashley Robinson}
 \celldescription{Raw Dtype}
 
+This gate matrix design was optimised by arranging polysilicon columns to allow as many transistors to fit on a row as possible.
+Three rows of PMOS transistors and four rows of NMOS transistors make up cell.
+Routing power rails up both sides of the matrix allowed the design to be further compressed.
+The D input on the middle left was intentionally not surrounded leaving only metal1 to reroute when it came to dimension matching.
+
 \stickdiagram{../rdtype/stickdiagram.pdf}
 \transistor{../rdtype/transistorcd.pdf}
 
