--- a/xor2/detail.tex
+++ b/xor2/detail.tex
@@ -2,6 +2,8 @@
 \designer{Ashley Robinson}
 \celldescription{A 2 input XOR gate.}
 
+Compound gate routed using an Euler path.
+
 \stickdiagram{../xor2/stickdiagram.pdf}
 \transistor{../xor2/transistorcd.pdf}
 
