appendix no LaTeX

--- a/global/AppendixA.tex
+++ b/global/AppendixA.tex
@@ -33,7 +33,7 @@ This was used to share files, allocate work and track bugs.
 
 \subsubsection{Process automation}
 The team produced a number of scripts to improve productivity by automating processes such extraction from magic, design simulation and consistency checking.
-Using \LaTeX allowed the databook compilation to also be automated as separate files for each cell were stored in the hierarchy of folders.   
+Using Latex allowed the databook compilation to also be automated as separate files for each cell were stored in the hierarchy of folders.   
 This way each designer could add their own files to the data book independently.
 
 
