Changes to the databook and some tex files

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -14,14 +14,24 @@
 \newcommand{\cellname}[1] {\newpage \section{#1} \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}}
 \newcommand{\designer}[1] {{\bf Designer: } #1\\}
 \newcommand{\celldescription}[1]{{\bf Cell Description: } #1\\}
-\newcommand{\topimages}[3]{\begin{multicols}{3}\subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{#1}\subsection*{Circuit Diagram}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{#2}\subsection*{Dimensions}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{#3}\end{multicols}}
+\newcommand{\topimages}[3]{
+\begin{multicols}{3}
+\subsection*{Symbol}
+\includegraphics[width=0.5\textwidth,height=4cm,keepaspectratio=true]{#1}
+\subsection*{Dimensions}
+\includegraphics[width=0.5\textwidth,height=4cm,keepaspectratio=true]{#3}
+\end{multicols}
+\subsection*{Circuit Diagram}
+\includegraphics[width=\textwidth,height=3cm,keepaspectratio=true]{#2}
+
+}
 
 \newcommand{\topimagesgate}[2]{\begin{multicols}{2}\subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{#1}\subsection*{Dimensions}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{#2}\end{multicols}}
 
 
 \newcommand{\sysverilog}[1]{\subsection*{System Verilog Simulation} \begin{figure}[h!] \centering \includegraphics[width=0.8\textwidth]{#1} \end{figure}}
 
-\newcommand{\acchar}[1]{\subsection*{AC Characteristics}\begin{table}[h!]\centering\begin{tabular}{cc}Signal & Delay (ps) \\ \hline\input{#1} \end{tabular}\end{table}}
+\newcommand{\acchar}[1]{\subsection*{AC Characteristics}\begin{table}[h!]\centering\begin{tabular}{cc}Signal & Average Delay (ps) \\ \hline\input{#1} \end{tabular}\end{table}}
 
 
 %% ----------------------------------------------------------------
