--- a/nand3/nand3.tex
+++ b/nand3/nand3.tex
@@ -2,7 +2,7 @@
 \cellname{nand3}
 \designer{Constantijn Schepens}
 \celldescription{A three input NAND gate}
-\topimages{../nand3/symbol.pdf}{../nand3/circuitdiagram.jpg}{../nand3/blackbox.pdf}
+\topimagesgate{../nand3/symbol.pdf}{../nand3/blackbox.pdf}
 
 \acchar{../nand3/acresults.txt}
 
