--- a/nand4/nand4.tex
+++ b/nand4/nand4.tex
@@ -2,7 +2,7 @@
 \cellname{nand4}
 \designer{Constantijn Schepens}
 \celldescription{A four input NAND gate}
-\topimages{../nand4/symbol.pdf}{../nand4/circuitdiagram.jpg}{../nand4/blackbox.pdf}
+\topimagesgate{../nand4/symbol.pdf}{../nand4/blackbox.pdf}
 
 \acchar{../nand4/acresults.txt}
 
