--- a/and2/and2.tex
+++ b/and2/and2.tex
@@ -2,7 +2,7 @@
 \cellname{And2}
 \designer{Constantijn Schepens}
 \celldescription{A two input AND gate}
-\topimages{../and2/symbol.pdf}{../and2/circuitdiagram.jpg}{../and2/blackbox.pdf}
+\topimagesgate{../and2/symbol.pdf}{../and2/blackbox.pdf}
 
 \acchar{../and2/acresults.txt}
 
