--- a/halfadder/halfadder.tex
+++ b/halfadder/halfadder.tex
@@ -2,7 +2,7 @@
 \cellname{halfadder}
 \designer{Martin Wearn}
 \celldescription{Adds two bits to produce a sum and carry}
-\topimages{../halfadder/symbol.png}{../halfadder/circuitdiagram.png}{../halfadder/blackbox.pdf}
+\topimages{../halfadder/symbol.png}{../halfadder/circuitdiagram.pdf}{../halfadder/blackbox.pdf}
 
 \acchar{../halfadder/acresults.txt}
 
