Sorted detail pages

--- a/fulladder/detail.tex
+++ b/fulladder/detail.tex
@@ -3,6 +3,7 @@
 \celldescription{Adds two bit values and the previous bitslice carry out, to produce a sum and carry}
 
 \stickdiagram{../fulladder/stickdiagram.pdf}
+\acchar{../fulladder/acresults.txt}
 \transistor{../fulladder/transistorcd.pdf}
+\spicesim{../fulladder/hspice.png}
 
-%TO DO : Results of loaded simulation bits
