--- a/rdtype/detail.tex
+++ b/rdtype/detail.tex
@@ -8,6 +8,7 @@ Routing power rails up both sides of the matrix allowed the design to be further
 The D input on the middle left was intentionally not surrounded leaving only metal1 to reroute when it came to dimension matching.
 
 \stickdiagram{../rdtype/stickdiagram.pdf}
+\acchar{../rdtype/acresults.txt}
 \transistor{../rdtype/transistorcd.pdf}
+\spicesim{../rdtype/hspice.png}
 
-%TO DO : Results of loaded simulation bits
