--- a/smux2/detail.tex
+++ b/smux2/detail.tex
@@ -10,6 +10,6 @@ raw D-type. Once this was done the required internal inverters were added in by
 creating a gate matrix design. 
 
 \stickdiagram{../smux2/stickdiagram.pdf}
+\acchar{../smux2/acresults.txt}
 \transistor{../smux2/transistorcd.pdf}
-
-%TO DO : Results of loaded simulation bits
+\spicesim{../smux2/hspice.png}
