--- a/smux3/detail.tex
+++ b/smux3/detail.tex
@@ -13,6 +13,6 @@ most efficient one, that also allowed all the internal wiring to be done with
 metal 1 exclusively(to reduce the number of vias).
 
 \stickdiagram{../smux3/stickdiagram.pdf}
+\acchar{../smux3/acresults.txt}
 \transistor{../smux3/transistorcd.pdf}
-
-%TO DO : Results of loaded simulation bits
+\spicesim{../smux2/hspice.png}
