--- a/xor2/detail.tex
+++ b/xor2/detail.tex
@@ -5,6 +5,6 @@
 Compound gate routed using an Euler path.
 
 \stickdiagram{../xor2/stickdiagram.pdf}
+\acchar{../xor2/acresults.txt}
 \transistor{../xor2/transistorcd.pdf}
-
-%TO DO : Results of loaded simulation bits
+\spicesim{../xor2/hspice.png}
