--- a/halfadder/detail.tex
+++ b/halfadder/detail.tex
@@ -3,6 +3,7 @@
 \celldescription{Adds two bits to produce a sum and carry}
 
 \stickdiagram{../halfadder/stickdiagram.pdf}
+\acchar{../halfadder/acresults.txt}
 \transistor{../halfadder/transistorcd.pdf}
+\spicesim{../halfadder/hspice.png}
 
-%TO DO : Results of loaded simulation bits
